<resources>
    <string name="app_name">Todok</string>
    <string name="no_task">Tu n’as aucune tâche à traiter</string>
    <string name="add_task">Ajouter une tâche</string>
    <string name="task_name_hint">Nom de la tâche</string>
    <string name="project_spinner_hint">Projet</string>
    <string name="add_button">Ajouter</string>
    <string name="add_task_spinner_hint">Nom du projet</string>
    <string name="action_filter_title">Filtre</string>
    <string name="sorting_alphabetic"><![CDATA[A -> Z]]></string>
    <string name="sorting_alphabetic_inverted"><![CDATA[Z -> A]]></string>
    <string name="sorting_oldest_first">Les plus anciens d\'abord</string>
    <string name="sorting_newest_first">Les plus récents d\'abord</string>
    <string name="project_tartampion">Projet Tartampion</string>
    <string name="project_lucidia">Projet Lucidia</string>
    <string name="project_circus">Projet Circus</string>
    <string name="add_task_dialog_error_task_description">Veuillez saisir une tâche</string>
    <string name="add_task_dialog_error_project">Veuillez selectionner un projet</string>
    <string name="add_task_insertion_error_toast">Impossible d\'ajouter la tâche…</string>
</resources>
